# Trell-Project-Progress

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_report.md
src/content_creation_crew/: crew.py  main.py
src/content_creation_crew/config/: tasks.yaml
src/content_creation_crew/tools/: custom_tool.py
