[project]
name = "content_creation_crew"
version = "0.1.0"
description = "content_creation_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
content_creation_crew = "content_creation_crew.main:run"
run_crew = "content_creation_crew.main:run"
train = "content_creation_crew.main:train"
replay = "content_creation_crew.main:replay"
test = "content_creation_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
